--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: einfache_krypto
 description: RSA Cryptography library with ease of use at its core.
-version: 1.0.0
+version: 1.0.0+2
 author:
 homepage:
 
