--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,14 @@
 name: einfache_krypto
 description: RSA Cryptography library with ease of use at its core.
-version: 1.0.3+2
-author:
+version: 1.0.4+2
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
-  optimus_prime: ^0.0.1+3
-  meta:
+  optimus_prime: ^0.0.2+2
 
 dev_dependencies:
   flutter_test:
